--- a/src/App.css
+++ b/src/App.css
@@ -154,11 +154,22 @@ body, .app {
   background-size: 20px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
+
+.disabled {
+  background: #a3a3a3;
+  background-image: url('./icons/arrow-drop-down.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 20px;
+}
 .book-shelf-changer select {
   width: 100%;
   height: 100%;
   opacity: 0;
   cursor: pointer;
+}
+.book-shelf-changer select:disabled {
+  cursor: not-allowed;
 }
 
 /* book cover */
