feat: Add Search Component
- Add search component
- Add search-input component
- Add empty-state when no books are found
- Add loading-state upon searching books
- Handle changing books between different shelves

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,11 @@ body, .app {
 }
 
 /* main page */
-
+.loader {
+  display: flex;
+  justify-content: center;
+  margin-top: 20em;
+}
 .list-books-title {
   padding: 10px 0;
   background: #2e7c31;
