--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@ body, .app {
   justify-content: center;
   margin-top: 20em;
 }
+.status {
+  text-align: center;
+  color: #2e7c31;
+}
 .list-books-title {
   padding: 10px 0;
   background: #2e7c31;
